fix word-wrap issus for author name

--- a/static/css/add-on.css
+++ b/static/css/add-on.css
@@ -4,3 +4,7 @@
   is an official part of the theme (ex. Pull Requests) should be included in main.css
   within the formating given.
 */
+
+.author {
+  white-space: normal;
+}
